# WEB-HW10

./: README.md  pyproject.toml
hw10_quotes/hw10_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hw10_quotes/super_quotes/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
hw10_quotes/super_quotes/migrations/: 0001_initial.py
hw10_quotes/super_quotes/static/super_quotes/: style.css
hw10_quotes/super_quotes/templates/super_quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  find_tag.html  index.html  parse.html  search_quotes.html
hw10_quotes/users/: forms.py  views.py
hw10_quotes/users/templates/users/: logout.html  signin.html  signup.html
hw10_quotes/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
