[tool.poetry]
name = "web-hw10"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
requests = "^2.31.0"
pymongo = "^4.4.0"
psycopg2 = "^2.9.6"
beautifulsoup4 = "^4.12.2"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
